finished listed steps, soundcloud iframe will not load

--- a/index.html
+++ b/index.html
@@ -1,21 +1,39 @@
 <!DOCTYPE html>
-<html lang="en" ng-app=''>
+<html lang="en" ng-app='sounder'>
 
 <head>
   <meta charset="UTF-8">
   <title>Document</title>
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
   <link rel="stylesheet" href="style.css">
-  <script src="bower_components/angular/angular.js"></script>
-  <script src="bower_components/jquery/dist/jquery.js"></script>
-  <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
 </head>
 
-<body ng-controller=''>
+<body ng-controller='MainController'>
+<div class="form-group">
+  <form class="form-inline" ng-submit="getUser()">
+    <label>Search for tracks by username</label>
+    <input ng-model="username" class="form-control" type="text"/>
+    <button class="btn btn-default">Search</button>
+  </form>
+</div>
+<div ng-bind-html="iFrame"></div>
+<div class="row">
+  <div ng-repeat="song in userTracks">
+    <div class="col-md-1 col-sm-2">
+      <!--<img src="http://i.ytimg.com/vi/L5z2-Mx9TNE/hqdefault.jpg" ng-click="play(song.permalink_url)"-->
+           <!--ng-if="!song.artwork_url">-->
+      <img src="{{song.artwork_url}}" ng-click="play(song.permalink_url)" ng-if="song.artwork_url">
+    </div>
+  </div>
+</div>
 
-  <script src="js/app.js"></script>
-  <script src="js/controller.js"></script>
-  <script src="js/service.js"></script>
+<script src="bower_components/angular/angular.js"></script>
+<script src="bower_components/jquery/dist/jquery.js"></script>
+<script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
+<script src="http://connect.soundcloud.com/sdk.js"></script>
+<script src="js/app.js"></script>
+<script src="js/controller.js"></script>
+<script src="js/service.js"></script>
 </body>
 
 </html>
